--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,9 +11,9 @@ body {
     font-size: 50px;
     color: white;
     text-justify: center;
-};
+}
 
 .page--caption {
-    color: white;
-    font-size: 40px;
-};
+    color: aquamarine;
+    font-size: 16px;
+}
