--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,3 +17,8 @@ body {
     color: aquamarine;
     font-size: 16px;
 }
+.info {
+    font-family: verdana;
+    color: gray;
+    font-size: 16px;
+}
